<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Translator</string>

    <string name="action_settings">Settings</string>
    <string name="txt_input">Enter Text</string>
    <string-array name="language_choice">
        <item>Arabic</item>
        <item >Bulgarian</item>
        <item >Catalan</item>
        <item >Chinese_Simplified</item>
        <item >Chinese_Traditional</item>
        <item >Czech</item>
        <item >Danish</item>
        <item >Dutch</item>
        <item >English</item>
        <item >Estonian</item>
        <item >Finnish</item>
        <item >French</item>
        <item >German</item>
        <item >Greek</item>
        <item >Haitian_Creole</item>
        <item >Hebrew</item>
        <item >Hindi</item>
        <item >Hungarian</item>
        <item >Indonesian</item>
        <item >Italian</item>
        <item >Japanese</item>
        <item >Korean</item>
        <item >Latvian</item>
        <item >Lithuanian</item>
        <item >Malay</item>
        <item >Norwegian</item>
        <item >Persian</item>
        <item >Polish</item>
        <item >Portuguese</item>
        <item >Romanian</item>
        <item >Russian</item>
        <item >Slovak</item>
        <item >Slovenian</item>
        <item >Spanish</item>
        <item >Swedish</item>
        <item >Thai</item>
        <item >Turkish</item>
        <item >Ukrainian</item>
        <item >Urdu</item>
        <item >Vietnamese</item>
        
        
    </string-array>
    <string name="Spin">Select Language</string>
    <string name="translate">Translate</string>
    <string name="output">Translation</string>
    <string name="speak">Speak</string>

</resources>
