<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txt_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_input" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/language_choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/language_choice"
            android:prompt="@string/Spin" />

        <ImageView
            android:id="@+id/flag"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/english" />
    </LinearLayout>

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/output"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/space"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.54" />

        <Button
            android:id="@+id/speak"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:text="@string/speak"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="jhregf"
        android:textSize="16dp" />

</LinearLayout>